댓글 기능 추가

--- a/blog/2024-10-13-retrospective/index.mdx
+++ b/blog/2024-10-13-retrospective/index.mdx
@@ -1,9 +1,10 @@
 ---
 slug: 2024-retrospective-frontend-engineer
-title: "'프론트 개발자'라고 나를 소개하기까지"
+title: "나를 '프론트 개발자'로 소개하기까지"
 authors: MinjiKim
 tags: [frontend, retrospective, career]
 image: ./re1.png
+comments: true
 ---
 
 프론트엔드 개발자로서 일을 시작한 지 어느덧 4개월이 지났습니다. 이번 글에서는 글또 9기 활동을 포함해 프론트엔드 개발자로 성장해 온 시간과 지난 4개월간의 회사 생활을 되돌아보고, 앞으로 글또 10기에서 목표한 계획을 공유하고자 합니다.
